Add save/get skills methods
